home page design done

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styleSheet.css">
-    <title>Shield</title>
+    <title>Homepage</title>
 </head>
 <body>
-    
+    <!--Starting main content coding-->
+    <main id="webpage">
+        <div id="site-intro">
+            <div class="images"><!--Images to be shown in the front page-->
+                <img src="images/undraw_Security_on_re_e491.svg" id="img1" alt="doc-img" width="212"/>
+                <img src="images/undraw_personal_file_222m.svg" alt="doc-img" width="332"/>
+                <img src="images/undraw_Secure_server_re_8wsq.svg" id="img1" alt="doc-img" width="212"/>
+            </div>
+            <div class="app-name"><!--App name-->
+                <h1>Shield</h1>
+                <i class="far fa-play-circle animate__animated animate__swing animate__infinite	infinite" style="font-size: 50px;cursor: pointer;"></i>
+            </div>
+        </div>
+    </main>
+    <!--ending main content coding-->
 </body>
 </html>
