--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
     </main>
     <!--ending main content coding-->
 
+    <!--Loading Effect start-->
+    <div class="loader-page">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <!--Loading Effect end-->
+
+
     <script src="script/script.js"></script>
     <script src="script/script.js"></script>
     <script src="script/signup_login.js"></script>
