login, upload img and welcome box

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1>Login User!</h1>
                     <input id="log-name" type="text" placeholder="&#xf007;  Username" required>
                     <input id="log-pwd" type="password" placeholder="&#xf023;  Password" required>
-                    <div><input onclick="login()" id="log-sub" type="submit" value="Login"></div>
+                    <div><input onclick=" return login()" id="log-sub" type="submit" value="Login"></div>
                 </form>
                 <form action="" autocomplete="off">
                     <h1>Signup User!</h1>
